<!--
================================================================================
 * Doppler ICP Stitcher Open3D 
 * ================================================================================
 * Advanced Point Cloud Registration & Mapping Solution
 * Features: Doppler-Enhanced ICP | CUDA Acceleration | Real-Time Processing
 * Technologies: Open3D | ROS 2 | NVIDIA CUDA | Eigen3
 * ================================================================================
 * Copyright (c) 2025 [FARNESS]. All rights reserved.
 * Maintainer:  <Farness_app@gmail.com>
 * ================================================================================
-->
<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>doppler_icp_stitcher_open3d_pro2</name>
  <version>0.0.0</version>
  <description>Professional version of Doppler ICP Stitcher using Open3D</description>
  <maintainer email="Farness_app@gmail.com">zassi</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage_mcap</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
